--- a/Copy_of_STP_Module_01_Lab_04_Transforming_data_using_linear_algebra_by_Om.ipynb
+++ b/Copy_of_STP_Module_01_Lab_04_Transforming_data_using_linear_algebra_by_Om.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AkulaSpoorthyReddy/AI-MLCourse/blob/main/Copy_of_STP_Module_01_Lab_04_Transforming_data_using_linear_algebra_by_Om.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "mU9LZjQxiQT2"
       },
       "source": [
@@ -1216,7 +1226,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
